style: rename CSS grey vars for better consistency

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -30,8 +30,9 @@ $gold-light: #ffe6a7;
 $black: #000;
 $grey-lightest: #f8f8f8;
 $grey-lighter: #f3f3f3;
-$grey-mid-light: #e7e7e7;
-$grey-light: #6c6c6c;
+$grey-light: #e7e7e7;
+$grey-mid-light: #888;
+$grey-mid: #6c6c6c;
 $grey-dark: #313131;
 $grey-shade: #c4c4c4;
 $navy: #203149;
