--- a/src/scss/components/_news-grid.scss
+++ b/src/scss/components/_news-grid.scss
@@ -14,7 +14,7 @@
 			}
 
 			.author {
-				color: $grey-light;
+				color: $grey-mid;
 				font-style: italic;
 				font-weight: $font-weight-semibold;
 			}
