--- a/src/scss/components/_tile-item.scss
+++ b/src/scss/components/_tile-item.scss
@@ -28,7 +28,7 @@
 		}
 
 		.date {
-			color: $grey-light;
+			color: $grey-mid;
 			font-style: italic;
 			padding-bottom: rem(16);
 		}
@@ -72,7 +72,7 @@
 				padding-left: 0;
 
 				li {
-					background: $grey-mid-light;
+					background: $grey-light;
 					border-radius: rem(32);
 					display: inline-block;
 					margin: 0 rem(12) rem(12) 0;
