feat: implement resource filter styling

--- a/src/_includes/components/filter-resources.njk
+++ b/src/_includes/components/filter-resources.njk
@@ -1,8 +1,9 @@
 <div class="filter">
+  <h2>{{ filterHeading }}</h2>
   {# Topic selections #}
   {# TODO: Dedupe this control #}
   <div class="filter-header">
-    <h2 class="h3">{{ topicsFilterTitle }}</h2>
+    <h3>{{ topicsFilterTitle }}</h3>
     <button type="button" class="filter-expand-button" data-section="topics" aria-expanded="false" aria-label="expand">
       <svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
       <svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
@@ -26,7 +27,7 @@
   {# Tag selections #}
   {# TODO: Dedupe this control #}
   <div class="filter-header">
-    <h2 class="h3">{{ tagsFilterTitle }}</h2>
+    <h3>{{ tagsFilterTitle }}</h3>
     <button type="button" class="filter-expand-button" data-section="tags" aria-expanded="false" aria-label="expand">
       <svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
       <svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
@@ -48,7 +49,7 @@
   {# Media Type selections #}
   {# TODO: Dedupe this control #}
   <div class="filter-header">
-    <h2 class="h3">{{ typeFilterTitle }}</h2>
+    <h3>{{ typeFilterTitle }}</h3>
     <button type="button" class="filter-expand-button" data-section="types" aria-expanded="false" aria-label="expand">
       <svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
       <svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
