--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -56,8 +56,9 @@ $orange-light: #5c81a9;
 
 $yellow: #ffcb70;
 
-$border-shadow-radius: 4px;
-$border-shadow-light: 0 0 $border-shadow-radius rgba(0, 0, 0, 0.25);
+$border-shadow-radius: rem(4);
+$border-shadow-colour: rgba(0, 0, 0, 0.25);
+$border-shadow-light: 0 0 $border-shadow-radius $border-shadow-colour;
 
 // UIO themes
 $UIOThemes:
