feat: adjust resource filter styling

--- a/src/scss/components/_resources.scss
+++ b/src/scss/components/_resources.scss
@@ -25,26 +25,33 @@
 		border: none;
 		border-radius: rem(9);
 		box-shadow: 0 0 rem(7) $border-shadow-colour;
-		padding: rem(24) rem(48);
+		padding: rem(24) rem(40);
 
 		h2 {
 			border-bottom: rem(1) solid $grey-mid-light;
-			font-size: rem(28);
+			font-size: rem(25);
 			font-weight: $font-weight-bold;
 			margin: 0;
-			padding-bottom: rem(16);
+			padding: 0 0 rem(12) rem(4);
 			text-transform: uppercase;
 		}
 
 		h3 {
 			border-bottom: none;
 			color: $grey-dark;
-			font-size: rem(20);
+			font-size: rem(18);
+			line-height: rem(40);
 		}
 
 		.filter-buttons {
 			background-color: initial;
 			border-top: none;
+			margin-top: rem(24);
+
+			button {
+				background-color: $white;
+				box-shadow: 0 0 rem(7) $border-shadow-colour;
+			}
 		}
 
 		.filter-header {
