--- a/src/_includes/layouts/resources.njk
+++ b/src/_includes/layouts/resources.njk
@@ -110,7 +110,7 @@ pagination:
         {# TODO: Dedupe this control #}
         <div class="filter-header">
           <h3>{{ topicsFilterTitle }}</h3>
-          <button type="button" class="filter-expand-button" data-section="topics" aria-expanded="false" aria-label="expand">
+          <button type="button" class="filter-expand-button" data-section="topics" aria-expanded="true" aria-label="expand">
             <svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
             <svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
           </button>
@@ -129,7 +129,7 @@ pagination:
         {# TODO: Dedupe this control #}
         <div class="filter-header">
           <h3>{{ tagsFilterTitle }}</h3>
-          <button type="button" class="filter-expand-button" data-section="tags" aria-expanded="false" aria-label="expand">
+          <button type="button" class="filter-expand-button" data-section="tags" aria-expanded="true" aria-label="expand">
             <svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
             <svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
           </button>
@@ -148,7 +148,7 @@ pagination:
         {# TODO: Dedupe this control #}
         <div class="filter-header">
           <h3>{{ typeFilterTitle }}</h3>
-          <button type="button" class="filter-expand-button" data-section="types" aria-expanded="false" aria-label="expand">
+          <button type="button" class="filter-expand-button" data-section="types" aria-expanded="true" aria-label="expand">
             <svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
             <svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
           </button>
