feat: style resource topic checkboxes (WIP cont'd)

--- a/src/_includes/components/filter-resources.njk
+++ b/src/_includes/components/filter-resources.njk
@@ -11,7 +11,7 @@
   </div>
 
   <div class="filter-body" data-section="topics">
-    <ul>
+    <ul class="topic-choices">
       {% for category in resourceCategories.resourceCategories %}
         {# Since there are multiple filters on the page (both for the static view and for the dynamic view),
         randomize checkbox IDs to ensure they're unique and avoid html validation errors #}
