--- a/src/_includes/components/filter-resources.njk
+++ b/src/_includes/components/filter-resources.njk
@@ -17,8 +17,25 @@
         randomize checkbox IDs to ensure they're unique and avoid html validation errors #}
         {% set categoryId = category.categoryId | randomizeFilter %}
         <li>
-          <input class="filter-checkbox" type="checkbox" id="{{ categoryId }}" name="{{ 'c_' + category.categoryId | slug }}">
-          <label for="{{ categoryId }}">{{ category.categoryLabel }}</label>
+          <div class="topic-title">
+            <span id="{{ "title" + categoryId }}">{{ category.categoryLabel }}</span>
+            <svg>
+              {# TODO: make this mapping configurable in the CMS #}
+              {% if category.categoryId === "aiAndDisability" %}
+                <use xlink:href="#topic-ai-and-disability" />
+              {% elif category.categoryId === "dataScience" %}
+                <use xlink:href="#topic-work-for-pwd-in-data-science" />
+              {% elif category.categoryId === "aiEthics" %}
+                <use xlink:href="#topic-ai-fairness-ethics-and-policy" />
+              {% elif category.categoryId === "designAndMethods" %}
+                <use xlink:href="#topic-technical-information" />
+              {% endif %}
+            </svg>
+          </div>
+          <div class="topic-checkbox">
+            <input class="filter-checkbox" aria-labelledby="{{ "title" + categoryId }}" type="checkbox" id="{{ categoryId }}" name="{{ 'c_' + category.categoryId | slug }}">
+            <label for="{{ categoryId }}"></label>
+          </div>
         </li>
       {% endfor %}
     </ul>
