feat: adjust topic checkbox styling, disable focus

--- a/src/scss/components/_resources.scss
+++ b/src/scss/components/_resources.scss
@@ -116,23 +116,31 @@
 					background: $white;
 					border: 1px solid $blue-alt-light;
 					border-radius: 0 0 $topic-title-border-radius $topic-title-border-radius;
-				}
 
-				&:focus,
-				&:focus-within {
-					.topic-title,
-					.topic-checkbox {
-						border: 2px solid $black;
-					}
-
-					.topic-title {
-						border-bottom: none;
-					}
-
-					.topic-checkbox {
-						border-top: none;
+					.filter-checkbox + label::before {
+						margin-right: 0;
 					}
 				}
+
+				/*
+					TODO: determine whether the design intends this to be a focus or hover state,
+					      or potentially some other state or combination thereof
+				*/
+				// &:focus,
+				// &:focus-within {
+				// 	.topic-title,
+				// 	.topic-checkbox {
+				// 		border: 2px solid $black;
+				// 	}
+
+				// 	.topic-title {
+				// 		border-bottom: none;
+				// 	}
+
+				// 	.topic-checkbox {
+				// 		border-top: none;
+				// 	}
+				// }
 			}
 		}
 	}
