--- a/src/scss/components/_resources.scss
+++ b/src/scss/components/_resources.scss
@@ -68,6 +68,13 @@
 			background-color: initial;
 			border-bottom: rem(1) solid $grey-mid-light;
 			margin: 0;
+			padding: 0 rem(16);
+
+			&:focus,
+			&:hover {
+				border-radius: rem(8);
+				box-shadow: 0 0 rem(12) rgba(0, 0, 0, 0.6);
+			}
 
 			button {
 				margin-right: 0;
