feat: add counter for selected filter choices

--- a/src/_includes/components/filter-resources.njk
+++ b/src/_includes/components/filter-resources.njk
@@ -3,7 +3,7 @@
   {# Topic selections #}
   {# TODO: Dedupe this control #}
   <div class="filter-header">
-    <h3>{{ topicsFilterTitle }}</h3>
+    <h3>{{ topicsFilterTitle }}&nbsp;(<span class="filter-selected-choice-counter">0</span>)</h3>
     <button type="button" class="filter-expand-button" data-section="topics" aria-expanded="false" aria-label="expand">
       <svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
       <svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
@@ -44,7 +44,7 @@
   {# Tag selections #}
   {# TODO: Dedupe this control #}
   <div class="filter-header">
-    <h3>{{ tagsFilterTitle }}</h3>
+    <h3>{{ tagsFilterTitle }}&nbsp;(<span class="filter-selected-choice-counter">0</span>)</h3>
     <button type="button" class="filter-expand-button" data-section="tags" aria-expanded="false" aria-label="expand">
       <svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
       <svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
@@ -66,7 +66,7 @@
   {# Media Type selections #}
   {# TODO: Dedupe this control #}
   <div class="filter-header">
-    <h3>{{ typeFilterTitle }}</h3>
+    <h3>{{ typeFilterTitle }}&nbsp;(<span class="filter-selected-choice-counter">0</span>)</h3>
     <button type="button" class="filter-expand-button" data-section="types" aria-expanded="false" aria-label="expand">
       <svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
       <svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
