fix: fix the discrepancy of checkbox names in static and dynamic views

--- a/src/_includes/components/filter-resources.njk
+++ b/src/_includes/components/filter-resources.njk
@@ -56,7 +56,7 @@
       {% for tag in resourceTags.resourceTags  %}
         {% set tagId = tag.value | randomizeFilter %}
         <li>
-          <input class="filter-checkbox" type="checkbox" id="{{ tagId }}" name="{{ 't_' + tag.value | slug }}">
+          <input class="filter-checkbox" type="checkbox" id="{{ tagId }}" name="{{ 't_' + tag.value }}">
           <label for="{{ tagId }}">{{ tag.label }}</label>
         </li>
       {% endfor %}
