--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -12,6 +12,7 @@
 @import "news-grid";
 @import "pagination";
 @import "post-article";
+@import "resource-detail";
 @import "resources";
 @import "search-container";
 @import "team";
