--- a/src/scss/components/_resource-detail.scss
+++ b/src/scss/components/_resource-detail.scss
@@ -27,7 +27,7 @@
 			background-color: $grey-light;
 			border-radius: rem(22);
 			display: inline-block;
-			margin: 0 rem(8);
+			margin: rem(2) rem(8);
 			padding: rem(8) rem(16);
 		}
 	}
