Join toolPurpose values by comma
Co-authored-by: BlueSlug <mossmonkey@gmail.com>

--- a/src/_includes/layouts/resourceDetail.njk
+++ b/src/_includes/layouts/resourceDetail.njk
@@ -64,7 +64,7 @@
 
           <svg><use xlink:href="#tool-purpose" /></svg>
           <div><span class="feature-name">Tool Purpose:</span>
-              {% if toolPurpose.length > 0 %}{{ toolPurpose | safe }}{% else %}N/A{% endif %}
+              {% if toolPurpose.length > 0 %}{{ toolPurpose | join(", ") | safe }}{% else %}N/A{% endif %}
           </div>
 
           <svg><use xlink:href="#accessibility" /></svg>
