fix: address review comments

--- a/src/resourcesIndex.njk
+++ b/src/resourcesIndex.njk
@@ -1,5 +1,5 @@
 ---
-permalink: resources.json
+permalink: resourceData.json
 ---
 {
   "resourceCategories": {{ resourceCategories.resourceCategories | dump | safe }},
