fix: svgs on the resources page now respond to uio contrast themes

--- a/src/_includes/layouts/resources.njk
+++ b/src/_includes/layouts/resources.njk
@@ -24,28 +24,28 @@ pagination:
     </symbol>
 
     {# for the tile items #}
-    <symbol id="media-type" viewBox="0 0 15 15" fill="none">
+    <symbol id="media-type" viewBox="0 0 16 16">
       {% include 'svg/media-type.svg' %}
     </symbol>
-    <symbol id="readability" viewBox="0 0 15 15" fill="none">
+    <symbol id="readability" viewBox="0 0 18 18">
       {% include 'svg/readability.svg' %}
     </symbol>
-    <symbol id="tags" viewBox="0 0 15 15" fill="none">
+    <symbol id="tags" viewBox="0 0 19 17">
       {% include 'svg/tags.svg' %}
     </symbol>
-    <symbol id="topics" viewBox="0 0 15 15" fill="none">
+    <symbol id="topics" viewBox="0 0 15 15">
       {% include 'svg/topics.svg' %}
     </symbol>
-    <symbol id="topic-ai-and-disability" viewBox="0 0 95 95" fill="none">
+    <symbol id="topic-ai-and-disability" viewBox="0 0 117 103">
       {% include 'svg/topic-ai-and-disability.svg' %}
     </symbol>
-    <symbol id="topic-ai-fairness-ethics-and-policy" viewBox="0 0 95 95" fill="none">
+    <symbol id="topic-ai-fairness-ethics-and-policy" viewBox="0 0 107 99">
       {% include 'svg/topic-ai-fairness-ethics-and-policy.svg' %}
     </symbol>
-    <symbol id="topic-technical-information" viewBox="0 0 95 95" fill="none">
+    <symbol id="topic-technical-information" viewBox="0 0 112 104">
       {% include 'svg/topic-technical-information.svg' %}
     </symbol>
-    <symbol id="topic-work-for-pwd-in-data-science" viewBox="0 0 95 95" fill="none">
+    <symbol id="topic-work-for-pwd-in-data-science" viewBox="0 0 101 99">
       {% include 'svg/topic-work-for-pwd-in-data-science.svg' %}
     </symbol>
   </svg>
