feat: add "clear topics" button and styling (WIP)

--- a/src/_includes/components/filter-resources.njk
+++ b/src/_includes/components/filter-resources.njk
@@ -39,6 +39,9 @@
         </li>
       {% endfor %}
     </ul>
+    <div class="filter-clear">
+      <button type="button">{{ topicsFilterClearLabel }}</button>
+    </div>
   </div>
 
   {# Tag selections #}
