--- a/src/_includes/layouts/resources.njk
+++ b/src/_includes/layouts/resources.njk
@@ -62,8 +62,11 @@ pagination:
 
       {% set filterHeading = "Filters" %}
       {% set topicsFilterTitle = "Topics" %}
+      {% set topicsFilterClearLabel = "Clear all topics" %}
       {% set tagsFilterTitle = "Tags" %}
+      {% set tagsFilterClearLabel = "Clear all tags" %}
       {% set typeFilterTitle = "Media Type" %}
+      {% set typeFilterClearLabel = "Clear all media types" %}
       {% set filterAction = "/resources/" %}
       {% include 'components/filter-resources.njk' %}
     </form>
