--- a/src/_includes/components/filter-resources.njk
+++ b/src/_includes/components/filter-resources.njk
@@ -4,7 +4,7 @@
   {# TODO: Dedupe this control #}
   <div class="filter-header">
     <h3>{{ topicsFilterTitle }}&nbsp;(<span class="filter-selected-choice-counter">0</span>)</h3>
-    <button type="button" class="filter-expand-button" data-section="topics" aria-expanded="false" aria-label="expand">
+    <button type="button" class="filter-expand-button" data-section="topics" aria-expanded="false" aria-label="expand or collapse the topics filter">
       <svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
       <svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
     </button>
@@ -48,7 +48,7 @@
   {# TODO: Dedupe this control #}
   <div class="filter-header">
     <h3>{{ tagsFilterTitle }}&nbsp;(<span class="filter-selected-choice-counter">0</span>)</h3>
-    <button type="button" class="filter-expand-button" data-section="tags" aria-expanded="false" aria-label="expand">
+    <button type="button" class="filter-expand-button" data-section="tags" aria-expanded="false" aria-label="expand or collapse the tags filter">
       <svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
       <svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
     </button>
@@ -70,7 +70,7 @@
   {# TODO: Dedupe this control #}
   <div class="filter-header">
     <h3>{{ typeFilterTitle }}&nbsp;(<span class="filter-selected-choice-counter">0</span>)</h3>
-    <button type="button" class="filter-expand-button" data-section="types" aria-expanded="false" aria-label="expand">
+    <button type="button" class="filter-expand-button" data-section="types" aria-expanded="false" aria-label="expand or collapse the media types filter">
       <svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
       <svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
     </button>
