--- a/src/_includes/layouts/resources.njk
+++ b/src/_includes/layouts/resources.njk
@@ -110,7 +110,7 @@ pagination:
         {# TODO: Dedupe this control #}
         <div class="filter-header">
           <h3>{{ topicsFilterTitle }}&nbsp;(<span class="filter-selected-choice-counter">{{ '{{ selectedCategories.length }}' }}</span>)</h3>
-          <button type="button" class="filter-expand-button" data-section="topics" aria-expanded="true" aria-label="expand">
+          <button type="button" class="filter-expand-button" data-section="topics" aria-expanded="true" aria-label="expand or collapse the topics filter">
             <svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
             <svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
           </button>
@@ -140,7 +140,7 @@ pagination:
         {# TODO: Dedupe this control #}
         <div class="filter-header">
           <h3>{{ tagsFilterTitle }}&nbsp;(<span class="filter-selected-choice-counter">{{ '{{ selectedTags.length }}' }}</span>)</h3>
-          <button type="button" class="filter-expand-button" data-section="tags" aria-expanded="true" aria-label="expand">
+          <button type="button" class="filter-expand-button" data-section="tags" aria-expanded="true" aria-label="expand or collapse the tags filter">
             <svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
             <svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
           </button>
@@ -159,7 +159,7 @@ pagination:
         {# TODO: Dedupe this control #}
         <div class="filter-header">
           <h3>{{ typeFilterTitle }}&nbsp;(<span class="filter-selected-choice-counter">{{ '{{ selectedTypes.length }}' }}</span>)</h3>
-          <button type="button" class="filter-expand-button" data-section="types" aria-expanded="true" aria-label="expand">
+          <button type="button" class="filter-expand-button" data-section="types" aria-expanded="true" aria-label="expand or collapse the media types filter">
             <svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
             <svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
           </button>
