fix: improve the accessiblity of expand/collapse button on initiative

--- a/src/_includes/layouts/views.njk
+++ b/src/_includes/layouts/views.njk
@@ -73,7 +73,7 @@ pagination:
       <div class="filter">
         <div class="filter-header">
           <h2 class="h3">Search Filters</h2>
-          <button type="button" class="filter-expand-button" aria-expanded="true" aria-label="collapse">
+          <button type="button" class="filter-expand-button" aria-expanded="true" aria-label="expand or collapse search filters">
             <svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
             <svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
           </button>
