--- a/src/_includes/components/filter.njk
+++ b/src/_includes/components/filter.njk
@@ -1,7 +1,7 @@
 <div class="filter">
   <div class="filter-header">
     <h2 class="h3">{{ filterTitle }}</h2>
-    <button type="button" class="filter-expand-button" aria-expanded="false" aria-label="expand">
+    <button type="button" class="filter-expand-button" aria-expanded="false" aria-label="expand or collapse search filters">
       <svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
       <svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
     </button>
